--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,3 +1,34 @@
+html,
+body {
+  height: 100%;
+}
+h1 {
+  text-align: center;
+}
+.quesStyle {
+  width: 100%;
+  position: fixed;
+  top: 20%;
+  font-size: 35px;
+  text-align: center;
+}
+.inputField {
+  height: 34px;
+  width: 25%;
+  font-size: 20px;
+}
+.previewButton {
+  display: flex;
+  justify-content: center;
+  margin-top: 20%;
+}
+.button {
+  background: none;
+  border: none;
+  font-size: 30px;
+  cursor: pointer;
+  outline: none;
+}
 .initial {
   display: inline-block;
   height: 20px;
